--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_url:
 site_description: Showcasing generative AI projects that run on Jetson
 ## Repository
 repo_name: jetson-generative-ai-playground
-repo_url: https://nvidia-ai-iot.github.io/jetson-generative-ai-playground
+repo_url: https://github.com/NVIDIA-AI-IOT/jetson-generative-ai-playground
 edit_uri: ''
 theme:
   name: "material"
