Re-structure menu and add MiniGPT-4 page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ markdown_extensions:
   - pymdownx.tabbed:
       alternate_style: true 
   - meta
+  - footnotes
 
 extra_css:
   - css/colors.css
@@ -62,11 +63,26 @@ extra_css:
 nav:
   - Home: index.md
   - Tutorials:
-    - Intro: tutorial-intro.md
-    - 1. Text Generation: tutorial_text-generation.md 
-    - 2. Image Generation: tutorial_diffusion.md
-    - 3. Distillation: tutorial_distillation.md
-  - Try: try.md
+    - About Jetson: tutorial-intro.md
+    - LLM:
+      - text-generation-webui: tutorial_text-generation.md 
+    # - LLM + ASR/TTS:
+    #   - LlamaSpeak: tutorial_llamaspeak.md
+    - LLM + Vision:
+      - Mini-GPT4: tutorial_minigpt4.md
+      - LLaVA: tutorial_llava.md
+      # - NeVA: tutorial_NeVA.md
+    - Image Generation:
+      - Stable Diffusion: tutorial_stable-diffusion.md
+    # - Tools:
+    #   - LangChain: tutorial_distillation.md
+    - Foundation models:
+      - 📑 Knowledge Distillation: tutorial_distillation.md
+      - NanoSAM: tutorial_nanosam.md
+    - Tips:
+      - 🔖 SSD + Docker: tips_ssd-docker.md
+      - 🔖 Memory optimization: tips_ram-optimization.md
+  - Buy: buy.md
 
 extra:
   analytics:
