--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,7 @@ nav:
     - Vision:
       - SAM: tutorial_sam.md
       - NanoSAM: tutorial_nanosam.md
+      - NanoOWL: tutorial_nanoowl.md
       - TAM: tutorial_tam.md
     # - NanoOWL: tutorial_nanoowl.md
     - VectorDB:
