--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,9 @@
-site_name: Jetson Generative AI Playground
+site_name: Jetson Generative AI Lab
 site_url: 
 site_description: Showcasing generative AI projects that run on Jetson
 ## Repository
-repo_name: jetson-generative-ai-playground
-repo_url: https://github.com/NVIDIA-AI-IOT/jetson-generative-ai-playground
+#repo_name: jetson-generative-ai-playground
+#repo_url: https://github.com/NVIDIA-AI-IOT/jetson-generative-ai-playground
 edit_uri: ''
 theme:
   name: "material"
