updated page title

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Jetson Generative AI Lab
+site_name: NVIDIA Jetson Generative AI Lab
 site_url: 
 site_description: Showcasing generative AI projects that run on Jetson
 ## Repository
