--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,7 +94,7 @@ nav:
       - 🔖 Memory optimization: tips_ram-optimization.md
   - Benchmarks: benchmarks.md
   - Community Articles: community_articles.md
-  - Buy: buy.md
+  - Try: try.md
 
 extra:
   generator: false
