--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,7 @@ extra_css:
 nav:
   - Home: index.md
   - Tutorials:
-    - About NVIDIA Jetson: tutorial-intro.md
+    - Introduction: tutorial-intro.md
     - Text (LLM):
       - text-generation-webui: tutorial_text-generation.md 
       - llamaspeak 🆕: tutorial_llamaspeak.md
@@ -87,7 +87,7 @@ nav:
     - Vector Database:
       - NanoDB: tutorial_nanodb.md
     - Audio:
-      - Audiocraft 🆕: tutorial_audiocraft.md
+      - AudioCraft 🆕: tutorial_audiocraft.md
       - Whisper 🆕: tutorial_whisper.md
     # - Tools:
     #   - LangChain: tutorial_distillation.md
