--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,5 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material==9.1.21
+      - run: pip install mkdocs-redirects
       - run: mkdocs gh-deploy --force
