--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ theme:
       - navigation.top
       - content.tabs.link
       - content.code.copy
+      - announce.dismiss
       
 plugins:
   - search
