--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,10 +10,13 @@ theme:
   name: "material"
   custom_dir: docs/overrides
   favicon: images/nvidia-favicon-rgb-16x16px@2x.png
-  font: Incosolata
+  font: 
+    text: NVIDIA-NALA
   palette:
     - media: "(prefers-color-scheme: light)" 
       scheme: nv-black-green
+      primary: nv-black-green
+      accent: nv-black-green
 
   features:
       - navigation.indexes
@@ -68,6 +71,7 @@ markdown_extensions:
 extra_css:
   - css/colors.css
   - css/extra.css
+  - css/nvidia-font.css
 
 nav:
   - Home: index.md
