Tutorial: First steps with MMJs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,6 +102,8 @@ nav:
     - Audio:
       - AudioCraft: tutorial_audiocraft.md
       - Whisper: tutorial_whisper.md
+    - Metropolis Microservices for Jetson:
+      - First steps: tutorial_mmj.md
     # - Tools:
     #   - LangChain: tutorial_distillation.md
     - Tips:
