--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,7 +106,7 @@ nav:
     - Audio:
       - Whisper: tutorial_whisper.md
       - AudioCraft: tutorial_audiocraft.md
-      - VoiceCraft: tutorial_voicecraft.md
+      - VoiceCraft 🆕: tutorial_voicecraft.md
     - Metropolis Microservices:
       - First Steps: tutorial_mmj.md
     # - Tools:
