--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -114,6 +114,8 @@ nav:
     #  - First Steps: tutorial_mmj.md
     # - Tools:
     #   - LangChain: tutorial_distillation.md
+    - Computer Vision: 
+      - Ultralytics: tutorial_ultralytics.md
     - Tips:
       - 📑 Knowledge Distillation: tutorial_distillation.md
       - 🔖 SSD + Docker: tips_ssd-docker.md
