--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,9 @@ nav:
       - Stable Diffusion XL: tutorial_stable-diffusion-xl.md
     - NVIDIA SDKs:
       - Holoscan SDK 🆕: tutorial_holoscan.md
+    - Gapi / API Integrations:
+      - Workflows 🆕: tutorial_gapi_workflows.md
+      - Micro Services 🆕: tutorial_gapi_microservices.md
     #- Metropolis Microservices:
     #  - First Steps: tutorial_mmj.md
     # - Tools:
