Test version draft changes of Flux 2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,44 +76,45 @@ extra_css:
   - css/nvidia-font.css
 
 nav:
-  - Home: index.md
-  - Tutorials:
-    - Introduction: tutorial-intro.md
-    - Hello AI World: hello_ai_world.md
-    - Agent Studio: agent_studio.md
-    - Text (LLM):
+  - 🏠 Home: index.md
+  - 📚 Tutorials:
+    - ✨ Introduction: tutorial-intro.md
+    - 👋 Hello AI World: hello_ai_world.md
+    - 🤖 Agent Studio: agent_studio.md
+    - 📝 Text (LLM):
       - text-generation-webui: tutorial_text-generation.md 
       - ollama: tutorial_ollama.md
       - llamaspeak: tutorial_llamaspeak.md
       - NanoLLM: tutorial_nano-llm.md
       - Small LLM (SLM): tutorial_slm.md
       - API Examples: tutorial_api-examples.md
-    - Text + Vision (VLM):
+    - 👁️‍🗨️ Text + Vision (VLM):
       - LLaVA: tutorial_llava.md
       - Live LLaVA: tutorial_live-llava.md
       - NanoVLM: tutorial_nano-vlm.md
-    - Vision Transformers (ViT): 
+    - 🔍 Vision Transformers (ViT): 
       - vit/index.md
       - EfficientViT: vit/tutorial_efficientvit.md
       - NanoOWL: vit/tutorial_nanoowl.md
       - NanoSAM: vit/tutorial_nanosam.md
       - SAM: vit/tutorial_sam.md
       - TAM: vit/tutorial_tam.md
-    - RAG & Vector Database:
+    - 🗄️ RAG & Vector Database:
       - NanoDB: tutorial_nanodb.md
       - LlamaIndex: tutorial_llamaindex.md
       - Jetson Copilot: tutorial_jetson-copilot.md
-    - API Integrations 🆕:
+    - 🧩 API Integrations 🆕:
       - ROS2 Nodes: ros.md
       - Holoscan SDK: tutorial_holoscan.md
       - Gapi Workflows: tutorial_gapi_workflows.md
       - Gapi Micro Services: tutorial_gapi_microservices.md
       - Ultralytics YOLOv8: tutorial_ultralytics.md
-    - Audio:
+    - 🎵 Audio:
       - Whisper: tutorial_whisper.md
       - AudioCraft: tutorial_audiocraft.md
       - VoiceCraft: tutorial_voicecraft.md
-    - Image Generation:
+    - 🎨 Image Generation:
+      - Flux & ComfyUI: tutorial_comfyui_flux.md
       - Stable Diffusion: tutorial_stable-diffusion.md
       - Stable Diffusion XL: tutorial_stable-diffusion-xl.md
     #- Metropolis Microservices:
@@ -125,9 +126,9 @@ nav:
       - 🔖 SSD + Docker: tips_ssd-docker.md
       - 🔖 Memory optimization: tips_ram-optimization.md
       - 🚅 Initial Setup Guide - Jetson Orin Nano: initial_setup_jon.md
-  - Benchmarks: benchmarks.md
-  - Projects: community_articles.md
-  - Research Group: research.md
+  - 🏁 Benchmarks: benchmarks.md
+  - 🛠️ Projects: community_articles.md
+  - 🧠 Research Group: research.md
   #- Try: try.md
 
 extra:
